# moniSH

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OS_Assignment-2  README.md  cmake_install.cmake  global.h  main.c  moniSH
src/: args_vector.c  args_vector.h  cd.c  cd.h  echo.c  echo.h  history.c  history.h  ls.c  ls.h  pinfo.c  pinfo.h  prompt.c  prompt.h  run_bg.c  run_bg.h  run_fg.c  run_fg.h  track_bg.c  track_bg.h
utils/: clear_variables.c  clear_variables.h  init.c  init.h  pid_name_pair.c  pid_name_pair.h  stack.c  stack.h
